fix: scrollbar and close-button; featuring: register buttons.

--- a/css/index_style.css
+++ b/css/index_style.css
@@ -128,7 +128,7 @@ p.login-register-p a:hover {
     width: 3vw;
     height: 100%;
     position: relative;
-    z-index: 1;
+    z-index: 2;
 }
 
 .dropdown-nav .department-button {
@@ -191,17 +191,66 @@ p.login-register-p a:hover {
 .side-nav {
     height: 100%;
     width: 0;
+    display: flex;
+    flex-direction: column;
     position: fixed;
-    z-index: 1;
     top: 0;
     left: 0;
     background-color: #0060b1;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
+    z-index: 998;
+    scrollbar-width: thin;
 }
 
-.side-nav a {
+.welcome-message {
+    width: 420px;
+    display: flex;
+    position: relative;
+    -webkit-box-align: center;
+    align-items: center;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    padding: 1rem 1rem 0rem;
+    overflow-x: visible;
+}
+
+.welcome-message .close-button {
+    position: absolute;
+    right: 2rem;
+    color: white;
+    text-decoration: none;
+    font-size: 46px;
+    overflow-x: visible;
+}
+
+.sections::-webkit-scrollbar {
+    width: 8px;
+}
+
+.sections::-webkit-scrollbar-track {
+    background-color: rgba(128, 176, 216, 0.4);
+}
+
+.sections::-webkit-scrollbar-thumb {
+    border: 2px solid transparent;
+    background-clip: content-box;
+    background-color: #80b0d8;
+}
+
+.sections .side-nav-link {
+    display: block;
+    padding: 13px 0px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    text-decoration: none;
+    transition: 0.3s;
+}
+
+.credentials a {
     display: block;
     padding: 16px 0px;
     color: white;
@@ -212,12 +261,10 @@ p.login-register-p a:hover {
     transition: 0.3s;
 }
 
-.side-nav .close-button {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 46px;
-    margin-left: 0px;
+.sections {
+    margin: 0px 16px;
+    max-height: 363px;
+    overflow-y: auto;
 }
 
 .account {
@@ -238,4 +285,43 @@ p.login-register-p a:hover {
     padding: 1rem 0px;
     margin-right: 2rem;
     margin-left: 1rem;
+}
+
+.credentials {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 1.5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.credentials .login-button {
+    display: flex;
+    width: 100%;
+    height: 48px;
+    position: relative;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    border: 1px solid hsl(24, 100%, 50%);
+    background-color: rgb(255, 101, 0);
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 0.25rem;
+}
+
+.credentials .login-button:hover {
+    background-color: rgb(255, 135, 55);
+}
+
+.credentials .register {
+    font-size: 18px;
+    line-height: 1rem;
+    font-weight: 700;
+    text-align: center;
+}
+
+.credentials .register:hover {
+    text-decoration: underline;
 }
